force-app/main/default/objects/ScriptDetail__c/ScriptDetail__c.object-meta.xml
<CustomObject>
    <label>Detalhe do Script</label>
    <nameField>
        <label>Nome de ScriptDetail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalhes do Script</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>