force-app/main/default/objects/ScriptDetail__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Histórico de Comunicados</relationshipLabel>
    <relationshipName>Script_Log</relationshipName>
    <type>Lookup</type>
</CustomField>