force-app/main/default/objects/ScriptDetail__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
                <label>Comercial</label>
            </value>
            <value>
                <fullName>Technical</fullName>
                <label>Técnico</label>
            </value>
            <value>
                <fullName>Financial</fullName>
                <label>Financeiro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>