force-app/main/default/objects/ScriptDetail__c/fields/ChoicePortabilidade__c.field-meta.xml
<CustomField>
    <fullName>ChoicePortabilidade__c</fullName>
    <label>ChoicePortabilidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>