force-app/main/default/objects/ScriptDetail__c/fields/DisplayScriptFlow__c.field-meta.xml
<CustomField>
    <fullName>DisplayScriptFlow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exibir Fluxo de Avisos</label>
    <type>Checkbox</type>
</CustomField>