force-app/main/default/objects/ScriptDetail__c/fields/FirstNotification__c.field-meta.xml
<CustomField>
    <fullName>FirstNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifica qual primeiro registro de log do aviso para a conta</description>
    <label>Primeiro Aviso</label>
    <type>Checkbox</type>
</CustomField>