force-app/main/default/objects/ScriptDetail__c/fields/Log__c.field-meta.xml
<CustomField>
    <fullName>Log__c</fullName>
    <defaultValue>false</defaultValue>
    <description>É marcado como true somente para os registros criados para log (verbalizados)</description>
    <label>Log</label>
    <type>Checkbox</type>
</CustomField>