force-app/main/default/objects/ScriptDetail__c/fields/NameRichText__c.field-meta.xml
<CustomField>
    <fullName>NameRichText__c</fullName>
    <label>NameRichText</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>