force-app/main/default/objects/ScriptDetail__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operador</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Detalhes_do_Script</relationshipName>
    <type>Lookup</type>
</CustomField>