force-app/main/default/objects/ScriptDetail__c/fields/package__c.field-meta.xml
<CustomField>
    <fullName>package__c</fullName>
    <label>Pacote</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeScriptDetail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package1</fullName>
                <label>Pacote 1</label>
            </value>
            <value>
                <fullName>Package2</fullName>
                <label>Pacote 2</label>
            </value>
            <value>
                <fullName>Package3</fullName>
                <label>Pacote 3</label>
            </value>
            <value>
                <fullName>Package4</fullName>
                <label>Pacote 4</label>
            </value>
            <value>
                <fullName>Package5</fullName>
                <label>Pacote 5</label>
            </value>
            <value>
                <fullName>Package6</fullName>
                <label>Pacote 6</label>
            </value>
            <value>
                <fullName>Package7</fullName>
                <label>Pacote 7</label>
            </value>
            <value>
                <fullName>Package8</fullName>
                <label>Pacote 8</label>
            </value>
            <value>
                <fullName>Package9</fullName>
                <label>Pacote 9</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>