force-app/main/default/objects/ScriptDetail__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>Script__r.Priority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prioridade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>