force-app/main/default/objects/ScriptDetail__c/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixa</fullName>
            </value>
            <value>
                <fullName>Móvel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>