force-app/main/default/objects/ScriptDetail__c/fields/Recurrent__c.field-meta.xml
<CustomField>
    <fullName>Recurrent__c</fullName>
    <formula>Text( Script__r.Recurrent__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recorrente</label>
    <type>Text</type>
</CustomField>