force-app/main/default/objects/ScriptDetail__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <label>Script</label>
    <referenceTo>Script__c</referenceTo>
    <relationshipLabel>Detalhes do Script</relationshipLabel>
    <relationshipName>ScriptDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>