force-app/main/default/objects/ScriptDetail__c/fields/ScriptDetailMessage__c.field-meta.xml
<CustomField>
    <fullName>ScriptDetailMessage__c</fullName>
    <label>Mensagem do Script</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>