force-app/main/default/objects/ScriptDetail__c/fields/ScriptEndDate__c.field-meta.xml
<CustomField>
    <fullName>ScriptEndDate__c</fullName>
    <formula>Script__r.EndDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScriptEndDate</label>
    <type>Date</type>
</CustomField>