force-app/main/default/objects/ScriptDetail__c/fields/ScriptMessage__c.field-meta.xml
<CustomField>
    <fullName>ScriptMessage__c</fullName>
    <label>Mensagem</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>