force-app/main/default/objects/ScriptDetail__c/fields/ScriptStartDate__c.field-meta.xml
<CustomField>
    <fullName>ScriptStartDate__c</fullName>
    <formula>Script__r.StartDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScriptStartDate</label>
    <type>Date</type>
</CustomField>