force-app/main/default/objects/ScriptDetail__c/fields/ScriptStatus__c.field-meta.xml
<CustomField>
    <fullName>ScriptStatus__c</fullName>
    <formula>Text(Script__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScriptStatus</label>
    <type>Text</type>
</CustomField>