force-app/main/default/objects/ScriptDetail__c/fields/TypeScriptDetail__c.field-meta.xml
<CustomField>
    <fullName>TypeScriptDetail__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OfferFeatures</fullName>
                <label>Características da oferta</label>
            </value>
            <value>
                <fullName>Applications</fullName>
                <label>Aplicativos</label>
            </value>
            <value>
                <fullName>GeneralConditions</fullName>
                <label>Condições gerais</label>
            </value>
            <value>
                <fullName>Portability</fullName>
                <label>Portabilidade</label>
            </value>
            <value>
                <fullName>Control</fullName>
                <label>Controle</label>
            </value>
            <value>
                <fullName>FinalOrientation</fullName>
                <label>Orientação final</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>