force-app/main/default/objects/ScriptDetail__c/fields/UsefulProcedure__c.field-meta.xml
<CustomField>
    <fullName>UsefulProcedure__c</fullName>
    <description>Campo utilizado para mensurar a utilidade dos procedimentos</description>
    <label>Esta informação foi útil?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>