force-app/main/default/objects/ScriptDetail__c/fields/VerbalizationDate__c.field-meta.xml
<CustomField>
    <fullName>VerbalizationDate__c</fullName>
    <label>Data de Verbalização</label>
    <type>Date</type>
</CustomField>