force-app/main/default/objects/ScriptDetail__c/fields/Verbalized__c.field-meta.xml
<CustomField>
    <fullName>Verbalized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Verbalizado</label>
    <type>Checkbox</type>
</CustomField>