force-app/main/default/objects/ScriptDetail__c/fields/WarningCreateDate__c.field-meta.xml
<CustomField>
    <fullName>WarningCreateDate__c</fullName>
    <formula>Script__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Criação do Aviso</label>
    <type>Date</type>
</CustomField>