force-app/main/default/objects/ScriptDetail__c/recordTypes/ClusterLog.recordType-meta.xml
<RecordType>
    <fullName>ClusterLog</fullName>
    <active>true</active>
    <description>Mostra o Log de consultas pelos atendentes no Script Guiado de atendimento</description>
    <label>Cluster</label>
</RecordType>