force-app/main/default/objects/ScriptDetail__c/recordTypes/MobileAltaLog.recordType-meta.xml
<RecordType>
    <fullName>MobileAltaLog</fullName>
    <active>true</active>
    <description>Usado para cadastrar os passos do Script de Venda de Móvel Alta</description>
    <label>Detalhes Venda de Móvel (Alta)</label>
</RecordType>