force-app/main/default/objects/ScriptDetail__c/recordTypes/WarningLogs.recordType-meta.xml
<RecordType>
    <fullName>WarningLogs</fullName>
    <active>true</active>
    <description>Tipo de Registro para Associar os clientes aos avisos manuais e consultar logs do Mural de Avisos</description>
    <label>Log de Avisos</label>
</RecordType>